# time-series-sensor

./: README.md  pyproject.toml  requirements.txt
data/processed/: 10.115.17.226.csv  10.99.80.179.csv  192.100.16.66.csv
data/raw/: 20221022_MagnetSiemens.jsonl  20221023_MagnetSiemens.jsonl  20221024_MagnetSiemens.jsonl  20221025_MagnetSiemens.jsonl  20221026_MagnetSiemens.jsonl
models/: 10.115.17.226_bore_model.keras  10.115.17.226_helium_model  10.115.17.226_helium_model.joblib  10.99.80.179_helium_model  192.100.16.66_bore_model
models/10.115.17.226_bore_model/: keras_metadata.pb  saved_model.pb
models/10.115.17.226_bore_model/variables/: variables.data-00000-of-00001  variables.index
models/10.99.80.179_bore_model/: keras_metadata.pb  saved_model.pb
models/10.99.80.179_bore_model/variables/: variables.data-00000-of-00001  variables.index
models/192.100.16.66_helium_model/: keras_metadata.pb  saved_model.pb
models/192.100.16.66_helium_model/variables/: variables.data-00000-of-00001  variables.index
notebooks/: 0.0-ejk-framing-the-problem.ipynb  1.0-eda.ipynb  1.0-ejk-getting-the-data-and-eda.ipynb  2.0-ejk-equipment1-predictions.ipynb  2.0-ml_modeling.ipynb  3.0-ejk-equipment2-predictions.ipynb  4.0-ejk-equipment3-predictions.ipynb
