[tool.poetry]
name = "time-series-sensor"
version = "0.1.0"
description = ""
authors = ["ewerthonk <kutz.ewerthon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "1.26.4"
pathlib = "^1.0.1"
matplotlib = "^3.9.3"
plotly = "^5.24.1"
statsmodels = "^0.14.4"
tensorflow = "^2.18.0"
keras = "^3.7.0"
joblib = "^1.4.2"
pmdarima = "^2.0.4"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^24.10.0"}
nbformat = ">4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
